src/app/core/settings/containers/settings.component.scss
:host {
    min-height: 100%;
    display: flex;
    justify-content: space-between;
    flex-direction: column;
}

.scrollable-area {
    max-height: 350px;
    overflow-y: scroll;
    padding: 20px 0;
}

form {
    margin: auto;
    z-index: 1;
    position: relative;

    .form-group {
        margin-bottom: 5px;

        .button-in-input {
            cursor: pointer;
            position: relative;
            top: -5px;
        }

        &.form-group--enabled {
            background-color: whitesmoke;
            padding: 10px;
        }

        .form-group-error {
            font-size: 10.5;
            display: flex;
            padding-left: 10px;
            margin-top: -15px;
        }
    }

    .radio-group {
        display: flex;
        justify-content: space-evenly;
        margin-left: 5px;
    }

    .details {
        position: relative;
        top: -17px;
        right: 0;
        text-align: end;
        padding: 10px;
    }

    .gender-label {
        display: flex;
        font-weight: 300;
        margin-top: 15px;
        margin-left: 5px;
    }

    .small-hint {
        display: flex;
        margin-left: 15px;
        font-size: 10.5px;
    }

    .mat-error--with-details {
        display: inline-block;
        max-width: 80%
    }

    .extra-fields-explanation {
        margin: 20px 0;

        .nav-link {
            line-height: 8px;
            text-decoration: underline;
        }
    }    
}

.settings-img{
    position: absolute;
    bottom: 200px;
    right: 25px;
    border-radius: 60px;
    z-index: 0;
    height: 300px;
}

.modify-buttons {
    display: flex;
    justify-content: flex-end;

    .edit-button {
        display: flex;
        align-items: center;
        justify-content: center;
        margin-top: 0px;
        margin-bottom: 20px;
        width: 175px;

        mat-icon {
            margin-left: 5px;
        }
    }
}

